--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
       "email": "mark@mark-bradley.net"
     }
   ],
+  "autoload": {
+    "psr-4": {"Braddle\\": "src/"}
+  },  
   "require": {
     "behat/behat": "3.1.x-dev",
     "doctrine/orm": "2.6.x-dev"
